tests/basic/eq/eq_int_assert_03.pan.out
tests/basic/eq/eq_int_assert_03.pan:5:1-4: error: unable to verify type of f41
tests/basic/eq/eq_int_assert_03.pan:10:1-4: error: unable to verify type of f43
tests/basic/eq/eq_int_assert_03.pan:16:1-4: error: unable to verify type of f51
tests/basic/eq/eq_int_assert_03.pan:21:1-4: error: unable to verify type of f53