tests/basic/eq/eq_int_assert_03.pan
eq : (a:â„¤) â†’ (b:â„¤) â†’ { c:ğ”¹ | c = true âŸº a = b }
assert : { b:ğ”¹ | b = true } â†’ ğŸ™

f41 : {x:int|x=2} -> unit
f41 = \x:int.
  let p = eq x 1 in
  assert p

f43 : {x:int|x>0} -> unit
f43 = \x:int.
  let p = eq x 1 in
  assert p


f51 : {x:int|x=2} -> unit
f51 = \x:int.
  let p = eq 1 x in
  assert p

f53 : {x:int|x>0} -> unit
f53 = \x:int.
  let p = eq 1 x in
  assert p


